--- a/package.json
+++ b/package.json
@@ -13,10 +13,23 @@
     "@nuxt/eslint": "1.2.0",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.9.0",
+    "@vueuse/nuxt": "13.0.0",
+    "apexcharts": "^4.5.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.0",
+    "nuxt-auth-utils": "0.5.16",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-tabler-icons": "^2.21.0",
+    "vue3-apexcharts": "^1.8.0",
+    "vue3-perfect-scrollbar": "^2.0.0",
+    "vuetify-nuxt-module": "0.18.3",
+    "zod": "^3.24.2"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "sass": "^1.86.3",
+    "sass-loader": "^16.0.5"
+  }
 }
